--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 .btn, #btn-create-new-board {
-  width: 300px;
+  width: 350px;
   height: 100px;
   border: none;
   border-radius: 15px;
@@ -20,7 +20,9 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   text-shadow: 0 0 3px black; }
-  #btn-create-new-board.active hr {
-    height: 0;
-    border: 0;
-    border-top: 1px solid white; }
+  #btn-create-new-board.active {
+    height: 350px; }
+    #btn-create-new-board.active hr {
+      height: 0;
+      border: 0;
+      border-top: 1px solid white; }
