--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,5 @@
 .btn {
-    width: 300px;
+    width: 350px;
     height: 100px;
     border: none;
     border-radius: 15px;
@@ -34,7 +34,7 @@
     text-shadow: 0 0 3px black;
 
     &.active {
-
+        height: 350px;
 
         hr {
             height: 0;
