--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,4 @@
-.btn {
+.card {
     width: 350px;
     height: 100px;
     border: none;
@@ -25,8 +25,8 @@
     // }
 }
 
-#btn-create-new-board {
-    @extend .btn;
+#card-create-new-board {
+    @extend .card;
     background-color: mediumaquamarine;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -35,12 +35,64 @@
 
     &.active {
         height: 350px;
+        text-align: left;
+        // padding-left: 20px;
+        padding: 0;
 
         hr {
+            width: 100%;
+            left: 0;
             height: 0;
             // margin-bottom: -0.5em;
             border: 0;
             border-top: 1px solid white;
         }
+
+        h5 {
+            font-size: 12px;
+        }
+    }
+}
+
+input {
+    border: none;
+    border-radius: 5px;
+    width: 250px;
+    height: 40px;
+    box-shadow: 1px 3px 5px lighten(black, 30);
+    padding: 0 10px;
+}
+
+.btn {
+    width: 110px;
+    height: 40px;
+    font-size: 12px;
+    background-color: transparent;
+    border: none;
+    margin: 40px 0 0 0;
+    padding: 0;
+    transition-duration: 0.5s;
+
+    &:hover {
+        color: turquoise;
+    }
+}
+
+#btn-cancel {
+    @extend .btn;
+    color: white;
+    font-weight: bold;
+    text-shadow: 0 0 3px black;
+}
+
+#btn-create  {
+    @extend .btn;
+    background-color: white;
+    box-shadow: 0 3px 3px lighten(black, 50);
+    color: black;
+
+    &:hover {
+        background-color: lightgrey;
+        color: blue;
     }
 }
