--- a/scss/index.scss
+++ b/scss/index.scss
@@ -32,12 +32,16 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-shadow: 0 0 3px black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &.active {
         height: 350px;
         text-align: left;
         // padding-left: 20px;
         padding: 0;
+        flex-direction: column;
 
         hr {
             width: 100%;
