--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,8 @@
   margin-top: 50px;
   margin-left: 40px;
   user-select: none;
-  -moz-user-select: none; }
+  -moz-user-select: none;
+  cursor: pointer; }
   .card:hover, #card-create-new-board:hover {
     transform: scale(1.1);
     box-shadow: 2px 4px 8px gray; }
@@ -42,13 +43,19 @@
 input {
   border: none;
   border-radius: 5px;
-  width: 250px;
-  height: 40px;
+  width: 225px;
+  height: 50px;
   box-shadow: 1px 3px 5px #4d4d4d;
-  padding: 0 10px; }
+  padding: 0 10px;
+  font-size: 15px; }
+
+#option-buttons {
+  width: 100%;
+  display: flex;
+  justify-content: center; }
 
 .btn, #btn-cancel, #btn-create {
-  width: 110px;
+  width: 100px;
   height: 40px;
   font-size: 12px;
   background-color: transparent;
