--- a/scss/index.scss
+++ b/scss/index.scss
@@ -12,6 +12,7 @@
     margin-left: 40px;
     user-select: none;
     -moz-user-select: none;
+    cursor: pointer;
 
     &:hover {
         // animation: scale 0.1s linear;
@@ -63,14 +64,21 @@
 input {
     border: none;
     border-radius: 5px;
-    width: 250px;
-    height: 40px;
+    width: 225px;
+    height: 50px;
     box-shadow: 1px 3px 5px lighten(black, 30);
     padding: 0 10px;
+    font-size: 15px;
+}
+
+#option-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .btn {
-    width: 110px;
+    width: 100px;
     height: 40px;
     font-size: 12px;
     background-color: transparent;
