--- a/scss/index.scss
+++ b/scss/index.scss
@@ -56,7 +56,8 @@
         }
 
         h5 {
-            font-size: 12px;
+            font-size: 14px;
+            font-weight: lighter;
         }
     }
 }
