--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
   box-shadow: 2px 2px 5px gray;
   transform: scale(1);
   -webkit-transform: scale(1);
-  transition: all .2s ease-in-out;
+  transition: scale .2s ease-in-out;
   -webkit-transition: all .2s ease-in-out;
   margin-top: 50px;
   margin-left: 40px;
@@ -63,7 +63,7 @@ input {
   border: none;
   margin: 40px 0 0 0;
   padding: 0;
-  transition-duration: 0.5s; }
+  transition-duration: 0.3s; }
   .btn:hover, #btn-cancel:hover, #btn-create:hover {
     color: turquoise; }
 
@@ -79,3 +79,18 @@ input {
   #btn-create:hover {
     background-color: lightgrey;
     color: blue; }
+
+.card-header {
+  display: flex;
+  width: 80%;
+  justify-content: space-between; }
+
+.close-icon {
+  width: 18px;
+  height: 18px;
+  transform: scale(1) rotate(0);
+  transition: all 0.1s ease-in-out;
+  transition-delay: 0.1s; }
+  .close-icon:hover {
+    transform: scale(1.25) rotate(10deg);
+    transition-delay: 0s; }
