--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,7 +6,7 @@
     box-shadow: 2px 2px 5px lighten(black, 50);
     transform: scale(1);
     -webkit-transform: scale(1);
-    transition: all .2s ease-in-out;
+    transition: scale .2s ease-in-out;
     -webkit-transition: all .2s ease-in-out;
     margin-top: 50px;
     margin-left: 40px;
@@ -86,7 +86,7 @@ input {
     border: none;
     margin: 40px 0 0 0;
     padding: 0;
-    transition-duration: 0.5s;
+    transition-duration: 0.3s;
 
     &:hover {
         color: turquoise;
@@ -109,5 +109,24 @@ input {
     &:hover {
         background-color: lightgrey;
         color: blue;
+    }
+}
+
+.card-header {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+}
+
+.close-icon {
+    width: 18px;
+    height: 18px;
+    transform: scale(1) rotate(0);
+    transition: all 0.1s ease-in-out;
+    transition-delay: 0.1s;
+
+    &:hover {
+        transform: scale(1.25) rotate(10deg);
+        transition-delay: 0s;
     }
 }
