--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,13 @@
+html, body {
+  width: 100%;
+  height: 100%; }
+
 .card, #card-create-new-board {
   width: 350px;
   height: 100px;
   border: none;
-  border-radius: 15px;
-  box-shadow: 2px 2px 5px gray;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px gray;
   transform: scale(1);
   -webkit-transform: scale(1);
   transition: scale .2s ease-in-out;
@@ -12,7 +16,13 @@
   margin-left: 40px;
   user-select: none;
   -moz-user-select: none;
-  cursor: pointer; }
+  cursor: pointer;
+  color: black;
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
   .card:hover, #card-create-new-board:hover {
     transform: scale(1.1);
     box-shadow: 2px 4px 8px gray; }
@@ -20,12 +30,8 @@
 #card-create-new-board {
   background-color: mediumaquamarine;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
-  text-shadow: 0 0 3px black;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+  text-shadow: 0 0 3px black; }
   #card-create-new-board.active {
     height: 350px;
     text-align: left;
@@ -40,6 +46,13 @@
     #card-create-new-board.active h5 {
       font-size: 14px;
       font-weight: lighter; }
+
+#boards {
+  height: 100%;
+  width: 100%;
+  display: block;
+  display: grid;
+  grid-template-columns: repeat(3, 400px); }
 
 input {
   border: none;
