--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,10 @@
 html, body {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif; }
+
+#main-image-icon {
+  height: 80px; }
 
 .card, #card-create-new-board {
   width: 350px;
@@ -19,7 +23,6 @@ html, body {
   cursor: pointer;
   color: black;
   font-size: 24px;
-  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -107,3 +110,27 @@ input {
   .close-icon:hover {
     transform: scale(1.25) rotate(10deg);
     transition-delay: 0s; }
+
+#list-title {
+  background-color: mediumaquamarine;
+  color: white;
+  border-radius: 0;
+  text-shadow: 0px 0px 3px black;
+  width: 220px;
+  height: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  cursor: default; }
+  #list-title:hover {
+    transform: none;
+    box-shadow: 0 2px 5px gray; }
+
+#card-create-list {
+  background-color: navy;
+  color: white;
+  width: 170px;
+  height: 130px;
+  text-shadow: none;
+  font-size: 18px; }
