--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,11 @@
 html, body {
     width: 100%;
     height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#main-image-icon {
+    height: 80px;
 }
 
 .card {
@@ -20,7 +25,6 @@ html, body {
     cursor: pointer;
     color: black;
     font-size: 24px;
-    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -147,3 +151,41 @@ input {
         transition-delay: 0s;
     }
 }
+
+#list-title {
+    background-color: mediumaquamarine;
+    color: white;
+    border-radius: 0;
+    text-shadow: 0px 0px 3px black;
+    // box-shadow: 0px 2px 5px black;
+    width: 220px;
+    height: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    cursor: default;
+
+    &:hover {
+        transform: none;
+        box-shadow: 0 2px 5px lighten(black, 50);
+    }
+}
+
+#card-create-list {
+    background-color: navy;
+    color: white;
+    width: 170px;
+    height: 130px;
+    text-shadow: none;
+    font-size: 18px;
+}
+
+// #lists {
+//     width: 100%;
+//     display: block;
+//     display: grid;
+//     grid-template-columns: repeat(3, 400px);
+//     // grid-template-rows: auto;
+//     grid-row-gap: 10px;
+// }
