--- a/css/index.css
+++ b/css/index.css
@@ -139,13 +139,23 @@ input {
 #new-list-input-div {
   position: relative;
   width: 320px;
-  height: 130px;
+  height: 120px;
   margin-left: 40px;
-  box-shadow: 0px 1px 3px gray; }
+  box-shadow: 0px 4px 20px gray;
+  text-align: center; }
   #new-list-input-div input {
     position: relative;
-    left: 20px;
+    left: -20px;
     top: 20px; }
+  #new-list-input-div h7 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 16px;
+    width: 100%;
+    position: absolute;
+    bottom: 20px;
+    left: -15px; }
+  #new-list-input-div:hover {
+    color: black; }
 
 #new-list-close-icon {
   position: absolute;
