--- a/scss/index.scss
+++ b/scss/index.scss
@@ -187,14 +187,28 @@ input {
     position: relative;
     // border: 1px solid red;
     width: 320px;
-    height: 130px;
+    height: 120px;
     margin-left: 40px;
-    box-shadow: 0px 1px 3px lighten(black, 50);
+    box-shadow: 0px 4px 20px lighten(black, 50);
+    text-align: center;
 
     input {
         position: relative;
-        left: 20px;
+        left: -20px;
         top: 20px;
+    }
+
+    h7 {
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 16px;
+        width: 100%;
+        position: absolute;
+        bottom: 20px;
+        left: -15px;
+    }
+
+    &:hover {
+        color: black;
     }
 }
 
