--- a/scss/index.scss
+++ b/scss/index.scss
@@ -230,3 +230,31 @@ input {
 //     // grid-template-rows: auto;
 //     grid-row-gap: 10px;
 // }
+
+.list {
+    @extend .card;
+    width: 280px;
+    height: 150px;
+    font-size: 16px;
+    flex-direction: column;
+    border-radius: 0;
+
+    &:hover {
+        transform: none;
+        box-shadow: 0 2px 5px lighten(black, 50);
+    }
+}
+
+.list-sub-div {
+    height: 50%;
+    width: 100%;
+    text-align: center;
+
+    hr {
+        margin-top: 30px;
+        width: 90%;
+        color: white;
+        height: 1px;
+        border: 1px solid lightgrey;
+    }
+}
