--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ html, body {
 #main-image-icon {
   height: 80px; }
 
-.card, #card-create-new-board, .list {
+.card, #card-create-new-board, .list, .task {
   width: 350px;
   height: 100px;
   border: none;
@@ -26,7 +26,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center; }
-  .card:hover, #card-create-new-board:hover, .list:hover {
+  .card:hover, #card-create-new-board:hover, .list:hover, .task:hover {
     transform: scale(1.1);
     box-shadow: 2px 4px 8px gray; }
 
@@ -140,6 +140,7 @@ input {
   position: relative;
   width: 320px;
   height: 120px;
+  margin-top: 50px;
   margin-left: 40px;
   box-shadow: 0px 4px 20px gray;
   text-align: center; }
@@ -173,21 +174,45 @@ input {
   grid-row-gap: 10px; }
 
 .list {
-  width: 280px;
-  height: 150px;
+  width: auto;
+  height: auto;
+  min-width: 280px;
+  min-height: 165px;
   font-size: 16px;
-  flex-direction: column;
+  display: inline-block;
   border-radius: 0; }
+  .list input {
+    margin-bottom: -100px; }
   .list:hover {
     transform: none;
     box-shadow: 0 2px 5px gray; }
 
+.list-title-div {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
 .list-sub-div {
+  height: 165px;
+  top: 0;
   width: 100%;
   text-align: center; }
   .list-sub-div hr {
-    margin-top: 30px;
     width: 90%;
     color: white;
     height: 1px;
     border: 1px solid lightgrey; }
+
+.task {
+  background-color: palegreen;
+  width: auto;
+  min-width: 245px;
+  height: 50px;
+  margin: 0; }
+  .task .task-content {
+    min-width: 80%; }
+  .task img {
+    width: 20px;
+    height: 20px; }
