--- a/scss/index.scss
+++ b/scss/index.scss
@@ -188,6 +188,7 @@ input {
     // border: 1px solid red;
     width: 320px;
     height: 120px;
+    margin-top: 50px;
     margin-left: 40px;
     box-shadow: 0px 4px 20px lighten(black, 50);
     text-align: center;
@@ -233,11 +234,19 @@ input {
 
 .list {
     @extend .card;
-    width: 280px;
-    height: 150px;
+    width: auto;
+    height: auto;
+    // top: 0;
+    min-width: 280px;
+    min-height: 165px;
     font-size: 16px;
-    flex-direction: column;
+    // flex-direction: column;
+    display: inline-block;
     border-radius: 0;
+
+    input {
+        margin-bottom: -100px;
+    }
 
     &:hover {
         transform: none;
@@ -245,13 +254,23 @@ input {
     }
 }
 
+.list-title-div {
+    // top: 0;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .list-sub-div {
-    // height: 50%;
+    height: 165px;
+    top: 0;
     width: 100%;
     text-align: center;
 
     hr {
-        margin-top: 30px;
+        // margin-top: 30px;
         width: 90%;
         color: white;
         height: 1px;
@@ -260,5 +279,20 @@ input {
 }
 
 .task {
+    @extend .card;
+    background-color: palegreen;
+    width: auto;
+    min-width: 245px;
+    height: 50px;
+    // margin: 15px 0;
+    margin: 0;
+
+    .task-content {
+        min-width: 80%;
+    }
     
+    img {
+        width: 20px;
+        height: 20px;
+    }
 }
