--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 html, body {
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif; }
 
@@ -12,21 +12,23 @@ html, body {
   border: none;
   border-radius: 10px;
   box-shadow: 0px 2px 5px gray;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  transition: scale .2s ease-in-out;
-  -webkit-transition: all .2s ease-in-out;
   margin-top: 50px;
   margin-left: 40px;
+  color: black;
+  font-size: 24px;
   user-select: none;
   -moz-user-select: none;
   cursor: pointer;
-  color: black;
-  font-size: 24px;
   display: flex;
   justify-content: center;
   align-items: center; }
-  .card:hover, #card-create-new-board:hover, .list:hover, .task:hover {
+
+.grow-on-hover {
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  transition: scale .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out; }
+  .grow-on-hover:hover {
     transform: scale(1.1);
     box-shadow: 2px 4px 8px gray; }
 
@@ -52,7 +54,6 @@ html, body {
 
 #boards {
   width: 100%;
-  display: block;
   display: grid;
   grid-template-columns: repeat(3, 400px);
   grid-row-gap: 10px; }
@@ -124,9 +125,6 @@ input {
   font-size: 32px;
   margin-left: 45px;
   cursor: default; }
-  #list-title:hover {
-    transform: none;
-    box-shadow: 0 2px 5px gray; }
 
 #card-create-list {
   background-color: navy;
@@ -168,10 +166,7 @@ input {
 
 #lists {
   width: 100%;
-  display: block;
-  display: grid;
-  grid-template-columns: repeat(3, 350px);
-  grid-row-gap: 10px; }
+  display: flex; }
 
 .list {
   width: auto;
@@ -183,9 +178,6 @@ input {
   border-radius: 0; }
   .list input {
     margin-bottom: -100px; }
-  .list:hover {
-    transform: none;
-    box-shadow: 0 2px 5px gray; }
 
 .list-title-div {
   width: 100%;
@@ -198,7 +190,8 @@ input {
   height: 165px;
   top: 0;
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  margin-bottom: -5px; }
   .list-sub-div hr {
     width: 90%;
     color: white;
@@ -210,7 +203,7 @@ input {
   width: auto;
   min-width: 245px;
   height: 50px;
-  margin: 0; }
+  margin: 15px 10px; }
   .task .task-content {
     min-width: 80%; }
   .task img {
