--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,5 @@
 html, body {
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -14,33 +14,30 @@ html, body {
     border: none;
     border-radius: 10px;
     box-shadow: 0px 2px 5px lighten(black, 50);
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    transition: scale .2s ease-in-out;
-    -webkit-transition: all .2s ease-in-out;
     margin-top: 50px;
     margin-left: 40px;
+    color: black;
+    font-size: 24px;
+    
     user-select: none;
     -moz-user-select: none;
     cursor: pointer;
-    color: black;
-    font-size: 24px;
+
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.grow-on-hover {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    transition: scale .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;    
 
     &:hover {
-        // animation: scale 0.1s linear;
         transform: scale(1.1);
         box-shadow: 2px 4px 8px lighten(black, 50);
-        // -webkit-transition: scale(1.1);
-        // transition-duration: 0.1s;
     }
-
-    // @keyframes scale {
-    //     0% { transform: scale(1); }
-    //     100% { transform: scale(1.1); }
-    // }
 }
 
 #card-create-new-board {
@@ -53,7 +50,6 @@ html, body {
     &.active {
         height: 350px;
         text-align: left;
-        // padding-left: 20px;
         padding: 0;
         flex-direction: column;
 
@@ -61,7 +57,6 @@ html, body {
             width: 100%;
             left: 0;
             height: 0;
-            // margin-bottom: -0.5em;
             border: 0;
             border-top: 1px solid white;
         }
@@ -74,12 +69,9 @@ html, body {
 }
 
 #boards {
-    // height: 100%;
     width: 100%;
-    display: block;
     display: grid;
     grid-template-columns: repeat(3, 400px);
-    // grid-template-rows: auto;
     grid-row-gap: 10px;
 }
 
@@ -167,10 +159,10 @@ input {
     margin-left: 45px;
     cursor: default;
 
-    &:hover {
-        transform: none;
-        box-shadow: 0 2px 5px lighten(black, 50);
-    }
+    // &:hover {
+    //     transform: none;
+    //     box-shadow: 0 2px 5px lighten(black, 50);
+    // }
 }
 
 #card-create-list {
@@ -225,11 +217,11 @@ input {
 
 #lists {
     width: 100%;
-    display: block;
-    display: grid;
-    grid-template-columns: repeat(3, 350px);
-    // grid-template-rows: auto;
-    grid-row-gap: 10px;
+    display: flex;
+    // display: grid;
+    // grid-template-columns: repeat(3, 350px);
+    // // grid-template-rows: auto;
+    // grid-row-gap: 10px;
 }
 
 .list {
@@ -248,10 +240,10 @@ input {
         margin-bottom: -100px;
     }
 
-    &:hover {
-        transform: none;
-        box-shadow: 0 2px 5px lighten(black, 50);
-    }
+    // &:hover {
+    //     transform: none;
+    //     box-shadow: 0 2px 5px lighten(black, 50);
+    // }
 }
 
 .list-title-div {
@@ -268,6 +260,7 @@ input {
     top: 0;
     width: 100%;
     text-align: center;
+    margin-bottom: -5px;
 
     hr {
         // margin-top: 30px;
@@ -284,8 +277,8 @@ input {
     width: auto;
     min-width: 245px;
     height: 50px;
-    // margin: 15px 0;
-    margin: 0;
+    margin: 15px 10px;
+    // margin: 0;
 
     .task-content {
         min-width: 80%;
