--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,6 +6,25 @@ html, body {
 
 #main-image-icon {
     height: 80px;
+    margin-top: 10px;
+    text-align: center;
+
+    img {
+        border-radius: 50%;
+        height: 60px;
+        width: 60px;
+        text-shadow: 0px 0px 3px black;
+        transform: scale(1) rotate(0);
+        transition: all 0.1s ease-in-out;
+        transition-delay: 0.1s;
+        cursor: pointer;
+    
+        &:hover {
+            transform: scale(1.25) rotate(10deg);
+            transition-delay: 0s;
+            filter: hue-rotate(90deg);
+        }
+    }
 }
 
 .card {
@@ -149,7 +168,6 @@ input {
     color: white;
     border-radius: 0;
     text-shadow: 0px 0px 3px black;
-    // box-shadow: 0px 2px 5px black;
     width: 220px;
     height: 65px;
     display: flex;
@@ -158,11 +176,6 @@ input {
     font-size: 32px;
     margin-left: 45px;
     cursor: default;
-
-    // &:hover {
-    //     transform: none;
-    //     box-shadow: 0 2px 5px lighten(black, 50);
-    // }
 }
 
 #card-create-list {
@@ -177,7 +190,6 @@ input {
 #new-list-input-div {
     @extend .btn;
     position: relative;
-    // border: 1px solid red;
     width: 320px;
     height: 120px;
     margin-top: 50px;
@@ -218,10 +230,6 @@ input {
 #lists {
     width: 100%;
     display: flex;
-    // display: grid;
-    // grid-template-columns: repeat(3, 350px);
-    // // grid-template-rows: auto;
-    // grid-row-gap: 10px;
 }
 
 .list {
@@ -238,15 +246,9 @@ input {
     input {
         margin-bottom: -100px;
     }
-
-    // &:hover {
-    //     transform: none;
-    //     box-shadow: 0 2px 5px lighten(black, 50);
-    // }
 }
 
 .list-title-div {
-    // top: 0;
     width: 100%;
     height: 60px;
     display: flex;
