--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 html, body {
-  min-width: 100%;
+  width: min-content;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif; }
 
@@ -147,14 +147,14 @@ input {
   width: 170px;
   height: 130px;
   text-shadow: none;
-  font-size: 18px; }
+  font-size: 18px;
+  margin: 50px 40px 0 40px; }
 
 #new-list-input-div {
   position: relative;
   width: 320px;
   height: 120px;
-  margin-top: 50px;
-  margin-left: 40px;
+  margin: 50px 40px 0 40px;
   box-shadow: 0px 4px 20px gray;
   text-align: center; }
   #new-list-input-div input {
