--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,5 @@
 html, body {
-    min-width: 100%;
+    width: min-content;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -185,6 +185,7 @@ input {
     height: 130px;
     text-shadow: none;
     font-size: 18px;
+    margin: 50px 40px 0 40px;
 }
 
 #new-list-input-div {
@@ -192,8 +193,7 @@ input {
     position: relative;
     width: 320px;
     height: 120px;
-    margin-top: 50px;
-    margin-left: 40px;
+    margin: 50px 40px 0 40px;
     box-shadow: 0px 4px 20px lighten(black, 50);
     text-align: center;
 
